--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,109 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+
+.gallery {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 24px;
+  padding: 0;
+  margin: 70px auto;
+  max-width: 1128px;
+}
+
+.gallery-item {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+
+.gallery-link {
+  display: block;
+  text-decoration: none;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 200px;
+  display: block;
+  transition: transform 0.3s ease;
+}
+
+.gallery-image:hover {
+  transform: scale(1.02);
+}
+
+
+
+.main-title {
+  font-size: 40px;
+  font-weight: 600;
+  margin-bottom: 24px;
+  text-align: center;
+}
+
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 24px;
+  border-radius: 8px;
+  max-width: 360px;
+  margin: 0 auto;
+}
+
+.feedback-form label {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  font-weight: 500;
+  color: #2e2f42;
+  gap: 8px;
+  text-align: left;
+}
+
+.feedback-form input {
+  height: 20px;
+}
+
+.feedback-form textarea {
+  resize: none;
+  height: 80px;
+}
+
+.feedback-form input,
+.feedback-form textarea {
+  padding: 12px 16px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  font-size: 16px;
+  font-family: inherit;
+  transition: border-color 0.3s, box-shadow 0.3s;
+
+}
+
+.feedback-form input:focus,
+.feedback-form textarea:focus {
+  border: 1px solid #000;
+  outline: none;
+}
+
+.feedback-form button {
+  margin-top: 8px;
+  align-self: flex-start;
+  background-color: #4e75ff;
+  color: #fff;
+  padding: 10px 24px;
+  border: none;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.feedback-form button:hover,
+.feedback-form button:focus {
+  background-color: #6c8cff;
+}
